<resources>
    <string name="app_name">My Music App</string>
    <string name="title_activity_my_library">My Library</string>
    <string name="title_activity_artist">Artist</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_album_from_artist">AlbumFromArtist</string>
    <string name="title_activity_play_single">PlaySingle</string>
    <string name="title_activity_play_album_track">PlayAlbumTrack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_account">Account</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_myLibrary">My Library</string>
    <string name="navigation_drawer_myPlaylists">My Playlists</string>
    <string name="navigation_drawer_store">Music Store</string>
    <string name="navigation_drawer_settings">Preferences</string>
    <string name="navigation_drawer_signout">Sign Out</string>
    <string name="account_details_name">John Smith</string>
    <string name="account_details_email">john.smith@gmail.com</string>
    <string name="avatar_img_content_description">user profile avatar</string>

    <string name="action_main1">Settings</string>
    <string name="action_main2">Help</string>
    <string name="action_mylibrary1">Search</string>
    <string name="action_mylibrary2">Add To Playlist</string>
    <string name="action_mylibrary3">Delete</string>
    <string name="action_mylibrary4">Settings</string>
    <string name="action_now_playing1">Share</string>
    <string name="action_now_playing2">Add To Playlist</string>
    <string name="action_now_playing3">Details</string>
    <string name="action_now_playing4">Settings</string>

    <string name="suggested4U_HeaderTextView">Recommended For You</string>
    <string name="most_popular_HeaderTextView">Most Popular Now</string>
    <string name="new_music_HeaderTextView">New Music</string>
    <string name="recently_added_HeaderTextView">Recently Purchased</string>
    <string name="thumbnail_img_content_description">album cover thumbnail</string>
    <string name="search_hint">What are you looking for?</string>

    <string name="section_label1">Artists</string>
    <string name="section_label2">Albums</string>
    <string name="section_label3">All</string>

    <string name="artist_img_content_description">artist/album thumbnail</string>
    <string name="back_button">Back To Artist</string>
    <string name="back_to_album">Back To Album</string>
    <string name="action_settings">Settings</string>
    <string name="media_player_start_time">00:00</string>
    <string name="media_player_end_time">03:48</string>

    <string name="MainActivity_label">MAIN ACTIVITY (LAUNCHER):</string>
    <string name="MainActivity_description">
        A search bar allows you to search right away for whatever song, album or
        artist you have in mind at the moment, searching not just through your own library, but
        through the entire music store (not implemented).
        On the main screen also appear suggestions for new, popular or recommended music to be
        found in the store. Clicking on any of the suggested items brings you into
        a sub-activity of the MUSIC STORE parent activity (not implemented).
        If you click one of the items in the category \'Recently Purchased\',
        you can browse the album tracks (implemented).
    </string>

    <string name="MyLibrary_label">\'MY LIBRARY\' ACTIVITY:</string>
    <string name="MyLibrary_description">
        This tabbed activity allows you to browse the music library by artist, album
        or song.
        If you click a particular artist, you see all the albums by that artist
        contained in your library.
        If you click a particular album, you see all the songs contained in that album.
        If you click a particular song, a screen containing the song details is opened.
    </string>

    <string name="Artist_label">\'ARTIST\' ACTIVITY:</string>
    <string name="Artist_description">
        It shows the list of albums by the selected artist contained in your library.
        If you click any of the albums, you can browse the songs contained in that album.
    </string>

    <string name="Album_label">\'ALBUM\' ACTIVITY:</string>
    <string name="Album_description">
        It shows the list of songs contained in the selected album.
        Clicking any of the songs starts the activity PLAY SINGLE.
    </string>

    <string name="AlbumFromArtist_label">\'ALBUM FROM ARTIST\' ACTIVITY:</string>
    <string name="AlbumFromArtist_description">
        It shows the list of songs contained in the selected album.
        Clicking any of the songs starts the activity PLAY ALBUM TRACK.
        At the bottom of the screen, a button brings you back to the
        ARTIST screen from which you came.
    </string>

    <string name="PlaySingle_label">\'PLAY SINGLE\' ACTIVITY:</string>
    <string name="PlaySingle_description">
        It shows the song details and has an embedded media player (not implemented).
        Clicking the album cover, extra media-player controls are provided in a toggle view.
    </string>

    <string name="PlayAlbumTrack_label">\'PLAY ALBUM TRACK\' ACTIVITY:</string>
    <string name="PlayAlbumTrack_description">
        It shows the song details and has an embedded media player (not implemented).
        Clicking the album cover, extra media-player controls are provided in a toggle view.
        At the bottom of the screen, a button brings you back to the
        ALBUM or ALBUM FROM ARTIST screen from which you came.
    </string>

</resources>
