<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@mipmap/ic_library_music_black_24dp"
            android:title="@string/navigation_drawer_myLibrary" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@mipmap/ic_queue_music_black_24dp"
            android:title="@string/navigation_drawer_myPlaylists" />
        <item
            android:id="@+id/nav_store"
            android:icon="@mipmap/ic_shop_black_24dp"
            android:title="@string/navigation_drawer_store" />
    </group>

    <item android:title="@string/navigation_drawer_account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/navigation_drawer_settings" />

            <item
                android:id="@+id/nav_signout"
                android:icon="@mipmap/ic_keyboard_tab_black_24dp"
                android:title="@string/navigation_drawer_signout" />
        </menu>
    </item>

</menu>
