<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="@dimen/nav_header_avatar_img_dim"
        android:layout_height="@dimen/nav_header_avatar_img_dim"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        android:contentDescription="@string/avatar_img_content_description"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_details_name"
        android:textAppearance="@style/NavigationUserFullName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_details_email"
        android:textAppearance="@style/NavigationUserEmailAddress" />

</LinearLayout>
