<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.mymusicapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchBar_textView_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_padding"
            android:layout_weight="8"
            android:background="@color/darkerBackground"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/small_padding"
            android:scaleType="centerInside"
            android:src="@drawable/search_icon" />

    </LinearLayout>

    <ScrollView
        style="@style/MainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightYellow"
                android:gravity="center"
                android:padding="@dimen/small_padding"
                android:text="@string/MainActivity_label"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightestYellow"
                android:gravity="center"
                android:padding="@dimen/small_padding"
                android:text="@string/MainActivity_description"
                android:textAppearance="@android:style/TextAppearance.Small" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollableSections_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/headers_padding"
                    android:paddingTop="@dimen/headers_padding"
                    android:text="@string/new_music_HeaderTextView"
                    android:textAppearance="@style/ContentHeader" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/new_music"
                    style="@style/SmallItemsRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollableSections_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/headers_padding"
                    android:paddingTop="@dimen/headers_padding"
                    android:text="@string/suggested4U_HeaderTextView"
                    android:textAppearance="@style/ContentHeader" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/suggested4u"
                    style="@style/SmallItemsRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollableSections_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/headers_padding"
                    android:paddingTop="@dimen/headers_padding"
                    android:text="@string/most_popular_HeaderTextView"
                    android:textAppearance="@style/ContentHeader" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/most_popular"
                    style="@style/SmallItemsRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollableSections_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/headers_padding"
                    android:paddingTop="@dimen/headers_padding"
                    android:text="@string/recently_added_HeaderTextView"
                    android:textAppearance="@style/ContentHeader" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recently_added"
                    style="@style/SmallItemsRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
