<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.mymusicapp.MyStore"
    tools:showIn="@layout/app_bar_my_store">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        style="@style/MainScrollView"
        android:padding="@dimen/scrollView_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollableSections_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/headers_padding"
                    android:paddingBottom="@dimen/headers_padding"
                    android:text="@string/suggested4U_HeaderTextView"
                    android:textAppearance="@style/ContentHeader"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/suggested4u"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    style="@style/SmallItemsRecyclerView">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollableSections_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/headers_padding"
                    android:paddingBottom="@dimen/headers_padding"
                    android:text="@string/most_popular_HeaderTextView"
                    android:textAppearance="@style/ContentHeader"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/most_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    style="@style/SmallItemsRecyclerView">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/scrollableSections_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/headers_padding"
                    android:paddingBottom="@dimen/headers_padding"
                    android:text="@string/recently_added_HeaderTextView"
                    android:textAppearance="@style/ContentHeader"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recently_added"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    style="@style/SmallItemsRecyclerView">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
